parser: Refactor macro expander (#826)
The expander grew historically over multiple people and over multiple
paradigms in the compiler. While the capabilities are impressive, this
also made it hard to reason what it does and to quickly catch issues
like #822. As such the refactor unifies many of the approaches, creates
better utility functions and fixes some missed cases.